subiendo logica administrativos y docente